re PR target/27566 (ICEs in final_scan_insn and reload_cse_simplify_operands for vectors with SPE)

PR target/27566
        * config/rs6000/rs6000.c (rs6000_legitimize_reload_address): Do
        not reload a SPE symbol_ref into a lo_sum address.

From-SVN: r115902